<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">丑图秀秀</string>
    <string name="action_settings">Settings</string>
    
    <string name="main_photo_src_camera">相机</string>
    <string name="main_photo_src_gallery">相册</string>
    
    <!-- 通用提醒 -->
    <string name="storage_not_enough">存储空间不足，请及时清理</string>
    
    <!-- 选择照片 -->
    <string name="no_sdcard_hint">请插入SD卡</string>
    <string name="choose_photo_waiting">正在加载图片</string>
    
    <!-- 编辑窗口 -->
    <string name="photo_editor_tab_scene">场景</string>
    <string name="photo_editor_tab_widget">贴图</string>
    <string name="photo_editor_tab_text">文字</string>
    
    <string name="photo_editor_top_bar_finish">完成</string>
    
    <string name="photo_editor_top_bar_camera">重新拍摄</string>
    <string name="photo_editor_top_bar_reset">重置</string>
    <string name="photo_editor_top_bar_modify">调整</string>
    <string name="photo_editor_top_bar_delete">删除</string>
    <string name="photo_editor_top_bar_eraser">橡皮</string>
    
    <string name="photo_editor_context_btn_share">分享</string>
    <string name="photo_editor_context_btn_reset">重置</string>
    
	<string name="photo_editor_delete_all_widgets">确定删除所有素材吗?</string>
	<string name="photo_editor_cancel">取消</string>
	<string name="photo_editor_confirm">确定</string>
	<string name="photo_editor_save_failure">保存图片失败</string>
	<string name="photo_editor_saving">正在处理图片</string>
	
	<string name="photo_editor_cancel_hint">您确定取消所有操作，重新拍照么?</string>
	
	<!-- 贴图相关操作 -->
	<string name="image_menu_illumination">亮度</string>
	<string name="image_menu_contrast">对比度</string>
	<string name="image_menu_satuation">饱和度</string>
	<string name="image_menu_erase">擦除</string>
	<string name="image_menu_reset">重置</string>
	
	<!-- 编辑文本页面 -->
	<string name="edit_text_finish">完成</string>
	
	<!-- 相机 -->
    <string name="camera_btn_close">取消</string>
    <string name="camera_btn_crop_done">完成</string>
    <string name="camera_btn_crop_back">返回</string>
    <string name="tips_photo_size_invalid">图片格式不支持.</string>
    <string name="tips_photo_invalid_path">错误的路径</string>
    <string name="tips_photo_loading">正在加载中</string>
    <string name="tips_no_sdcard">未发现SD卡!</string>
    
    <!-- 发布页面 -->
    <string name="publish_include_origin_image">是否包含原图做对比</string>
    <string name="publish_share_to_weixin">分享到微信</string>
    <string name="publish_share_to_weibo">分享到微博</string>
    <string name="publish_share_to_friends">分享到朋友圈</string>
    <string name="publish_sns_section">分享至社交网络:</string>
    <string name="publish_finish">完成</string>
    <string name="publish_share_to_weibo_success">分享到微博成功</string>
    <string name="publish_share_to_weibo_failure">分享到微博失败</string>
    <string name="publish_exporting">正在导出图片</string>
    <string name="publish_exporting_failure">导出图片失败</string>
    <string name="publish_desc_hint">在此输入照片说明</string>
    <string name="publish_title">发 布</string>
</resources>
