<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_topbar"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@color/publish_topbar_background"
        android:contentDescription="image_crop_rl_topbar"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <ImageView
            android:id="@+id/publish_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:src="@drawable/camera_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/share_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/default_background"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/share_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/publish_desc_hint"
            android:maxLength="15"
            android:gravity="top|left" >
        </EditText>
    </LinearLayout>
    
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/publish_splitter"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/publish_splitter"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/publish_include_origin_image" />

        <com.canruoxingchen.uglypic.view.SlipButton
            android:id="@+id/publish_slip_btn"
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >
        </com.canruoxingchen.uglypic.view.SlipButton>
    </RelativeLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/publish_splitter"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#C8C8C8"
        android:text="@string/publish_sns_section"></TextView>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/publish_splitter"/>
    <TextView
        android:id="@+id/publish_share_to_weibo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/publish_share_to_weibo" >
    </TextView>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/publish_splitter"/>

    <TextView
        android:id="@+id/publish_share_to_weixin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:text="@string/publish_share_to_weixin" >
    </TextView>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/publish_splitter"/>

    <TextView
        android:id="@+id/publish_share_to_friends"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:text="@string/publish_share_to_friends" >
    </TextView>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/publish_splitter"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button android:id="@+id/publish_finish"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_centerInParent="true"
            android:background="@drawable/default_button_bg"
            android:textSize="15sp"
            android:textColor="@color/default_text_color"
            android:text="@string/publish_finish">
            
        </Button>
    </RelativeLayout>

</LinearLayout>