<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/photo_editor_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_alignParentTop="true" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/photo_editor_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_editor_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/photo_editor_tab_scene"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/photo_editor_tab_scene" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/photo_editor_tab_widget"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/photo_editor_tab_widget" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/photo_editor_tab_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/photo_editor_tab_text" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/photo_editor_tab_finish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/photo_editor_tab_finish" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <uk.co.senab.photoview.PhotoView
        android:id="@+id/photo_editor_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/photo_editor_bottom_bar"
        android:layout_below="@id/photo_editor_top_bar"></uk.co.senab.photoview.PhotoView>
</RelativeLayout>